feat: conclui section de exibição do primeiro produto

--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body { 
     background: #f7f7f7;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .title { 
     text-align: center;
+    margin-bottom: 80px;
 
 }
-
 
 .menu { 
     display: flex;
@@ -21,3 +22,43 @@ body {
     border-radius: 4px;
     cursor: pointer;
 }
+
+.main { 
+    
+    margin-top: 150px;
+    display: grid;
+    grid-template-columns: 500px 500px;
+    justify-content: center;
+    align-content: center;
+    border-radius: 4px;
+}
+
+.img { 
+    max-width: 500px;
+    border-radius: 4px;
+}
+
+.btn { 
+    background: #ee2211;
+    padding: 10px; 
+    text-decoration: none;
+    color: white; 
+    border-radius: 4px;
+}
+
+p { 
+    font-size: 20px;
+}
+
+.section-1 { 
+   text-align: end; 
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: end ;
+   background: white;
+   padding: 20px; 
+   border-radius: 4px;
+}
+
+
